--- a/config/scaffolding/NewTest123Project.yml
+++ b/config/scaffolding/NewTest123Project.yml
@@ -7,3 +7,12 @@ packages:
   gitUrl: https://github.com/santhu736852
   gitUsername: santhu736852
   gitBranch: main
+services:
+- serviceName: project.newtest123.integrations:TestAdd
+  packages:
+  - name: NewTest123Project
+    version: "1.0"
+- serviceName: pub.math:addInts
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.1131
